samples/_failures_safe/1761262344_671e8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aed125fd.c: In function ‘main’:
./samples/SAFE/__tmp_aed125fd.c:155:12: error: missing terminating " character
  155 |     printf("Analysis completed in %.4f
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aed125fd.c:155:5: error: expected expression at end of input
  155 |     printf("Analysis completed in %.4f
      |     ^~~~~~
./samples/SAFE/__tmp_aed125fd.c:155:5: error: expected declaration or statement at end of input
